# GAI4

./: .gitignore  tmp_venv.bash
HW_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Evaluation.ipynb  history_pretrained.csv  history_scratch.csv  pyproject.toml
HW_1/handin/: 00_PrepData.html  01_TrainModel.html  02_Evaluation.html  report.md
HW_2/: 00_PrepData.ipynb  01_DeepEnsemble_OOD.ipynb  02_Autoencoder_OOD.ipynb  HW2_report_jonas_gstoettenmayr.md
Unit_0/: EDA.ipynb  main.py  pyproject.toml
Unit_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Inference.ipynb  03_Debug_Model.ipynb  05_TrainModel_EarlyStop.ipynb
Unit_2/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_MC_Dropout.ipynb  03_DeepEnsemble_vs_MCDropout.ipynb  pyproject.toml
Unit_3/: 00_PrepData.ipynb  01_DenoisingAutoencoder.ipynb  02_AnomalyDetection.ipynb  README.md  pyproject.toml
Unit_4/: 00_FC_Autoencoder_2D.ipynb  01_FC_Autoencoder_3D.ipynb  02_VAE_2D.ipynb  03_VAE_3D.ipynb  04_LatentWalk_VAE.ipynb  05_LatentWalk_AE.ipynb  07_PrepDataFids.ipynb  08_own_VAE.ipynb
Unit_5/: 00_PrepData_MNIST.ipynb  01_GAN_MNIST.ipynb  02_Evaluate_GAN_MNIST.ipynb
